--- a/thesis.tex
+++ b/thesis.tex
@@ -737,6 +737,33 @@ p = 24 \; \text{узла} \times 100\;\frac{\text{Мбит}}{\text{с}} \times 0
 \label{table:warehouseCampusNet}
 \end{table}
 
+\newpage
+\subsection{Прототипирование сети}
+f
+
+\begin{landscape}
+\begin{figure}[H]
+        \centering
+        \includegraphics[scale=0.2]{topo_filial.png}
+        \caption{Прототипируемая топология сети филиала}
+        \label{fig:filialTopo}
+\end{figure}
+\end{landscape}
+
+\begin{figure}[H]
+        \centering
+        \includegraphics[scale=0.2]{topo_warehouse.png}
+        \caption{Прототипируемая топология сети склада}
+        \label{fig:warehouseTopo}
+\end{figure}
+
+\begin{figure}[H]
+        \centering
+        \includegraphics[scale=0.2]{topo_tp.png}
+        \caption{Прототипируемая топология сети точки присутствия}
+        \label{fig:tpTopo}
+\end{figure}
+
 
 
 \begingroup
