--- a/thesis.tex
+++ b/thesis.tex
@@ -739,7 +739,16 @@ p = 24 \; \text{узла} \times 100\;\frac{\text{Мбит}}{\text{с}} \times 0
 
 \newpage
 \subsection{Прототипирование сети}
-f
+ff
+
+\begin{landscape}
+\begin{figure}[H]
+        \centering
+        \includegraphics[scale=0.2]{topo_mainDep.png}
+        \caption{Прототипируемая топология сети главного штаба}
+        \label{fig:mainDepTopo}
+\end{figure}
+\end{landscape}
 
 \begin{landscape}
 \begin{figure}[H]
