--- a/thesis.tex
+++ b/thesis.tex
@@ -452,9 +452,9 @@ diagrams.net будут использованы для построения
 \hline
 \textbf{Название отдела} & \textbf{Количество людей} & \textbf{Количество АРМ} \\
 \hline
-Руководство склада & 2 & 2 \\
+Руководство склада & 1 & 1 \\
 \hline
-Группа складской логистики & 5 & 1 \\
+Группа складской логистики & 6 & 1 \\
 \hline
 Группа товарного учета & 13 & 13 \\
 \hline
@@ -500,7 +500,7 @@ diagrams.net будут использованы для построения
 \hline
 Руководство предприятия & 1 & 1000 & 0 & 1 \\
 \hline
-Коммерческий отдел & 3 & 1000 & 0 & 3 \\
+Коммерческий отдел & 3 & 100 & 3 & 0 \\
 \hline
 Бухгалтерия & 10 & 100 & 10 & 0 \\
 \hline
@@ -518,7 +518,7 @@ diagrams.net будут использованы для построения
 \hline
 Серверный отдел & 1 & 1000 & 0 & 1 \\
 \hline
-Итого & 187 & - & 182 & 5 \\
+Итого & 187 & - & 185 & 2 \\
 \hline 
 \end{tabular}
 \label{table:mainDepAccessLevel}
@@ -529,13 +529,13 @@ diagrams.net будут использованы для построения
 
 \begin{equation}
 \begin{aligned}
-p = & \; 182 \; \text{узла} \times 100 \;\frac{\text{Мбит}}{\text{с}} \times 0.4 + 4 \times 1000 \;\frac{\text{Мбит}}{\text{с}} \times 0.4\; + \\
-        & + 1 \times 1000\;\frac{\text{Мбит}}{\text{с}} \times 1 = 9880\;\frac{\text{Мбит}}{\text{с}}
+p = & \; 182 \; \text{узла} \times 100 \;\frac{\text{Мбит}}{\text{с}} \times 0.4 + 1 \times 1000 \;\frac{\text{Мбит}}{\text{с}} \times 0.4\; + \\
+        & + 1 \times 1000\;\frac{\text{Мбит}}{\text{с}} \times 1 = 8680\;\frac{\text{Мбит}}{\text{с}}
 \end{aligned}
 \label{formula:mainDepAggregationLoad}
 \end{equation}
                
-Таким образом требуется как минимум один порт типа 10GigabitEthernet.
+Таким образом требуется как минимум десять портов типа GigabitEthernet.
 Необходимо учесть также резервирование портов на уровне агрегации.
 Далее представлен итоговый расчет портов для каждого уровня сети
 главного штаба (Таблица \ref{table:mainDepCampusNet}). 
@@ -548,7 +548,7 @@ p = & \; 182 \; \text{узла} \times 100 \;\frac{\text{Мбит}}{\text{с}} \
 \hline
 \textbf{Уровень} & \textbf{Кол-во портов FastEthernet} & \textbf{Кол-во портов GigabitEthernet} & \textbf{Кол-во портов 10GigabitEthernet} \\
 \hline
-Доступ & 182 & 5 & 0 \\
+Доступ & 182 & 2 & 0 \\
 \hline
 Агрегация & 0 & 10 + 10 & 0 \\
 \hline
@@ -689,19 +689,19 @@ p = 6 \; \text{узлов} \times 100\;\frac{\text{Мбит}}{\text{с}} \times 
 \centering
 \small
 \caption{Расчет портов уровня доступа для склада}
-\begin{tabular}{|m{3cm}|m{2.5cm}|m{2.5cm}|m{2.5cm}|m{3cm}|}
+\begin{tabular}{|m{3cm}|m{2.5cm}|m{2.5cm}|m{2.5cm}|}
 \hline
-\textbf{Название отдела} & \textbf{Количество АРМ} & \textbf{Требования к скорости, Мбит/с} & \textbf{Кол-во портов FastEthernet} & \textbf{Кол-во портов GigabitEthernet} \\
+\textbf{Название отдела} & \textbf{Количество АРМ} & \textbf{Требования к скорости, Мбит/с} & \textbf{Кол-во портов FastEthernet} \\
 \hline
-Руководство склада & 2 & 1000 & 0 & 2 \\
+Руководство склада & 1 & 100 & 1 \\
 \hline
-Группа складской логистики & 1 & 100 & 1 & 0 \\
+Группа складской логистики & 1 & 100 & 1 \\
 \hline
-Группа товарного учета & 13 & 100 & 13 & 0 \\
+Группа товарного учета & 13 & 100 & 13 \\
 \hline
-Служба качества & 10 & 100 & 10 & 0 \\
+Служба качества & 10 & 100 & 10 \\
 \hline
-Итого & 26 & - & 24 & 2 \\
+Итого & 26 & - & 24 \\
 \hline
 \end{tabular}
 \label{table:warehouseAccessLevel}
@@ -711,11 +711,11 @@ p = 6 \; \text{узлов} \times 100\;\frac{\text{Мбит}}{\text{с}} \times 
 склада, воспользуемся Формулой \ref{formula:warehouseAggregationLoad}.
 
 \begin{equation}
-p = 24 \; \text{узла} \times 100\;\frac{\text{Мбит}}{\text{с}} \times 0.4 \; + 2 \; \text{узла} \times 1000\;\frac{\text{Мбит}}{\text{с}} \times 0.4 = 1760\;\frac{\text{Мбит}}{\text{с}}
+p = 24 \; \text{узла} \times 100\;\frac{\text{Мбит}}{\text{с}} \times 0.4 \; = 760\;\frac{\text{Мбит}}{\text{с}}
 \label{formula:warehouseAggregationLoad}
 \end{equation}
 
-Таким образом требуется как минимум два порта типа GigabitEthernet.
+Таким образом требуется как минимум один типа GigabitEthernet.
 Стоит отметить, что на складе ядро сети избыточно и, 
 следовательно, не будет использоваться.
 В Таблице \ref{table:warehouseCampusNet} представлен итоговый расчет портов для склада.
@@ -729,9 +729,9 @@ p = 24 \; \text{узла} \times 100\;\frac{\text{Мбит}}{\text{с}} \times 0
 \hline
 \textbf{Уровень} & \textbf{Кол-во портов FastEthernet} & \textbf{Кол-во портов GigabitEthernet} \\
 \hline
-Доступ & 24 & 2 \\
+Доступ & 24 & 1 \\
 \hline
-Агрегация & 0 & 2 \\
+Агрегация & 0 & 1 \\
 \hline
 \end{tabular}
 \label{table:warehouseCampusNet}
@@ -739,7 +739,15 @@ p = 24 \; \text{узла} \times 100\;\frac{\text{Мбит}}{\text{с}} \times 0
 
 \newpage
 \subsection{Прототипирование сети}
-ff
+В данном шаге требуется создать прототип сети с учетом 
+предварительного планирования количество портов, 
+политик резервирования, добавления сервера для 
+развертывания программной инфраструктуры предприятия, 
+трехуровневой архитектуры сети, полученных в предыдущем 
+пункте работы. 
+Для формирования прототипа используется программное 
+обеспечение draw.io и нотация Cisco. Топология главного штаба приведена на Рисунке \ref{fig:mainDepTopo}.
+
 
 \begin{landscape}
 \begin{figure}[H]
@@ -751,14 +759,288 @@ ff
 \end{landscape}
 
 \begin{landscape}
+Спецификация устройств промежуточных устройств прототипа главного штаба представлена в Таблице \ref{table:mainDepDevicesSpecs}.
+
+\begin{table}[H]
+\centering
+\small
+\caption{Спецификация промежуточных устройств прототипа главного штаба}
+\begin{tabular}{|m{2.5cm}|m{4cm}|m{2.5cm}|m{4.2cm}|m{5.3cm}|m{4cm}|}
+\hline
+\textbf{Модель устройств} & \textbf{Имя устройства} & \textbf{Модули расширения} & \textbf{Общее количество портов(с модулями расширения)} & \textbf{Используемые порты(названия, количество)} & \textbf{Свободные порты(названия, количество)} \\
+\hline
+2960 & 
+SW\_1\_L2\_GOSTEV & 
+- & 
+24 порта FastEthernet, 2 порта GigabitEthernet 
+& 2 порта: GigabitEthernet0/1-0/2, 1 порт FastEthernet0/1 
+& 24 порта FastEthernet \\
+\hline
+2960 & 
+SW\_2\_L2\_GOSTEV & 
+- & 
+24 порта FastEthernet, 2 порта GigabitEthernet & 
+13 портов: FastEthernet0/1-0/13, 2 порта GigabitEthernet0/1-0/2 & 
+11 портов FastEthernet \\
+\hline
+2960 &
+SW\_3\_L2\_GOSTEV &
+- &
+24 порта FastEthernet, 2 порта GigabitEthernet &
+20 портов: FastEthernet0/1-0/20, 2 порта GigabitEthernet0/1-0/2 &
+4 порта FastEthernet \\
+\hline
+2960 &
+SW\_4\_L2\_GOSTEV &
+- &
+24 порта FastEthernet, 2 порта GigabitEthernet &
+20 портов: FastEthernet0/1-0/20, 2 порта GigabitEthernet0/1-0/2 &
+4 порта FastEthernet \\
+\hline
+2960 &
+SW\_5\_L2\_GOSTEV &
+- &
+24 порта FastEthernet, 2 порта GigabitEthernet &
+10 портов: FastEthernet0/1-0/10, 2 порта GigabitEthernet0/1-0/2 &
+14 порта FastEthernet \\
+\hline
+2960 &
+SW\_6\_L2\_GOSTEV &
+- &
+24 порта FastEthernet, 2 порта GigabitEthernet &
+20 портов: FastEthernet0/1-0/20, 2 порта GigabitEthernet0/1-0/2 &
+4 портов FastEthernet \\
+\hline
+2960 &
+SW\_7\_L2\_GOSTEV &
+- &
+24 порта FastEthernet, 2 порта GigabitEthernet &
+20 портов: FastEthernet0/1-0/20, 2 порта GigabitEthernet0/1-0/2 &
+4 порта FastEthernet \\
+\hline
+2960 &
+SW\_8\_L2\_GOSTEV &
+- &
+24 порта FastEthernet, 2 порта GigabitEthernet &
+17 портов: FastEthernet0/1-0/17, 2 порта GigabitEthernet0/1-0/2 &
+7 портов FastEthernet \\
+\hline
+2960 &
+SW\_9\_L2\_GOSTEV &
+- &
+24 порта FastEthernet, 2 порта GigabitEthernet &
+20 портов: FastEthernet0/1-0/20, 2 порта GigabitEthernet0/1-0/2 &
+4 порта FastEthernet \\
+\end{tabular}
+\label{table:mainDepDevicesSpecs}
+\end{table}
+\end{landscape}
+
+\begin{landscape}
+\begin{table}[H]
+\centering
+\small
+\caption{Продолжение Таблицы \ref{table:mainDepDevicesSpecs}}
+\begin{tabular}{|m{2.5cm}|m{4cm}|m{2.5cm}|m{4.2cm}|m{5.3cm}|m{4cm}|}
+\hline
+2960 &
+SW\_10\_L2\_GOSTEV &
+- &
+24 порта FastEthernet, 2 порта GigabitEthernet &
+20 портов: FastEthernet0/1-0/20, 2 порта GigabitEthernet0/1-0/2 &
+4 порта FastEthernet \\
+\hline
+2960 &
+SW\_11\_L2\_GOSTEV &
+- &
+24 порта FastEthernet, 2 порта GigabitEthernet &
+20 портов: FastEthernet0/1-0/20, 2 порта GigabitEthernet0/1-0/2 &
+4 порта FastEthernet \\
+\hline
+2960 &
+SW\_12\_L2\_GOSTEV &
+- &
+24 порта FastEthernet, 2 порта GigabitEthernet &
+5 портов: FastEthernet0/1-0/5, 2 порта GigabitEthernet0/1-0/2 &
+19 портов FastEthernet \\
+\hline
+3650 24 PS &
+SW\_1\_L3\_GOSTEV &
+- &
+24 порта GigabitEthernet, 1 порт 10GigabitEthernet &
+14 портов: GigabitEthernet0/1-0/14, 1 порт 10GigabitEthernet &
+10 портов GigabitEthernet \\
+\hline
+3650 24 PS &
+SW\_2\_L3\_GOSTEV &
+- &
+24 порта GigabitEthernet, 1 порт 10GigabitEthernet &
+14 портов: GigabitEthernet0/1-0/14, 1 порт 10GigabitEthernet &
+10 портов GigabitEthernet \\
+\hline
+3650 24 PS &
+SW\_3\_L3\_GOSTEV &
+- &
+24 порта GigabitEthernet&
+3 порта: GigabitEthernet0/1-0/3 &
+21 порт GigabitEthernet \\
+\hline
+4321 &
+R\_1\_L3\_GOSTEV &
+- &
+3 порта GigabitEthernet &
+2 порта: 10GigabitEthernet0/1-0/2, 1 порт GigabitEthernet0/1 &
+2 порта GigabitEthernet\\
+\hline
+\end{tabular}
+\end{table}
+\end{landscape}
+
+В Таблице \ref{table:mainDepConnectionPlan} указан план по подключению конечных устройств в главном штабе.f
+
+% Please add the following required packages to your document preamble:
+% \usepackage{multirow}
+\begin{table}[H]
+\small
+\centering
+\caption{План по подключению конечных устройств в главном здании}
+\begin{tabular}{|l|l|l|}
+\hline
+\textbf{Название устройства}        & \textbf{Порт}            & \textbf{Описание подключения} \\ \hline
+\multirow{3}{*}{SW\_1\_L2\_GOSTEV}  & GigabitEthernet0/1       & PC\_1\_1\_GOSTEV              \\ \cline{2-3} 
+                                    & GigabitEthernet0/2       & SW\_1\_L3\_GOSTEV             \\ \cline{2-3} 
+                                    & FastEthernet0/1          & SW\_2\_L3\_GOSTEV             \\ \hline
+\multirow{4}{*}{SW\_2\_L2\_GOSTEV}  & FastEthernet0/1-0/3      & PC\_2\_1-3\_GOSTEV            \\ \cline{2-3} 
+                                    & FastEthernet0/4-0/13     & PC\_3\_1-10\_GOSTEV           \\ \cline{2-3} 
+                                    & GigabitEthernet0/1       & SW\_1\_L3\_GOSTEV             \\ \cline{2-3} 
+                                    & GigabitEthernet0/2       & SW\_2\_L3\_GOSTEV             \\ \hline
+\multirow{3}{*}{SW\_3\_L2\_GOSTEV}  & FastEthernet0/1-0/20     & PC\_4\_1-20\_GOSTEV           \\ \cline{2-3} 
+                                    & GigabitEthernet0/1       & SW\_1\_L3\_GOSTEV             \\ \cline{2-3} 
+                                    & GigabitEthernet0/2       & SW\_2\_L3\_GOSTEV             \\ \hline
+\multirow{3}{*}{SW\_4\_L2\_GOSTEV}  & FastEthernet0/1-0/20     & PC\_5\_1-20\_GOSTEV           \\ \cline{2-3} 
+                                    & GigabitEthernet0/1       & SW\_1\_L3\_GOSTEV             \\ \cline{2-3} 
+                                    & GigabitEthernet0/2       & SW\_2\_L3\_GOSTEV             \\ \hline
+\multirow{3}{*}{SW\_5\_L2\_GOSTEV}  & FastEthernet0/1-0/10     & PC\_5\_21-30\_GOSTEV          \\ \cline{2-3} 
+                                    & GigabitEthernet0/1       & SW\_1\_L3\_GOSTEV             \\ \cline{2-3} 
+                                    & GigabitEthernet0/2       & SW\_2\_L3\_GOSTEV             \\ \hline
+\multirow{3}{*}{SW\_6\_L2\_GOSTEV}  & FastEthernet0/1-0/20     & PC\_6\_1-20\_GOSTEV           \\ \cline{2-3} 
+                                    & GigabitEthernet0/1       & SW\_1\_L3\_GOSTEV             \\ \cline{2-3} 
+                                    & GigabitEthenet0/2        & SW\_2\_L3\_GOSTEV             \\ \hline
+\multirow{3}{*}{SW\_7\_L2\_GOSTEV}  & FastEthernet0/1-0/20     & PC\_6\_21-40\_GOSTEV          \\ \cline{2-3} 
+                                    & GigabitEthernet0/1       & SW\_1\_L3\_GOSTEV             \\ \cline{2-3} 
+                                    & GigabitEthernet0/2       & SW\_2\_L3\_GOSTEV             \\ \hline
+\multirow{4}{*}{SW\_8\_L2\_GOSTEV}  & FastEthernet0/1-0/15     & PC\_6\_41-55\_GOSTEV          \\ \cline{2-3} 
+                                    & FastEthernet0/16-0/17    & PC\_7\_1-2\_GOSTEV            \\ \cline{2-3} 
+                                    & GigabitEtherneet0/1      & SW\_1\_L3\_GOSTEV             \\ \cline{2-3} 
+                                    & GigabitEthernet0/2       & SW\_2\_L3\_GOSTEV             \\ \hline
+\multirow{3}{*}{SW\_9\_L2\_GOSTEV}  & FastEthernet0/1-0/20     & PC\_8\_1-20\_GOSTEV           \\ \cline{2-3} 
+                                    & GigabitEthernet0/1       & SW\_1\_L3\_GOSTEV             \\ \cline{2-3} 
+                                    & GigabitEthernet0/2       & SW\_2\_L3\_GOSTEV             \\ \hline
+\multirow{3}{*}{SW\_10\_L2\_GOSTEV} & FastEthernet0/1-0/20     & PC\_9\_1-20\_GOSTEV           \\ \cline{2-3} 
+                                    & GigabitEthernet0/1       & SW\_1\_L3\_GOSTEV             \\ \cline{2-3} 
+                                    & GigabitEthernet0/2       & SW\_2\_L3\_GOSTEV             \\ \hline
+\multirow{3}{*}{SW\_11\_L2\_GOSTEV} & FastEthernet0/1-0/20     & PC\_9\_21-40\_GOSTEV          \\ \cline{2-3} 
+                                    & GigabitEthernet0/1       & SW\_1\_L3\_GOSTEV             \\ \cline{2-3} 
+                                    & GigabitEthernet0/2       & SW\_2\_L3\_GOSTEV             \\ \hline
+\multirow{3}{*}{SW\_12\_L2\_GOSTEV} & FastEthernet0/1-0/5      & PC\_9\_41-45\_GOSTEV          \\ \cline{2-3} 
+                                    & GigabitEthernet0/1       & SW\_1\_L3\_GOSTEV             \\ \cline{2-3} 
+                                    & GigabitEthernet0/2       & SW\_2\_L3\_GOSTEV             \\ \hline
+\multirow{4}{*}{SW\_1\_L3\_GOSTEV}  & GigabitEthernet0/1-0/12  & SW\_1-12\_L2\_GOSTEV          \\ \cline{2-3} 
+                                    & GigabitEthernet0/13      & SW\_3\_L3\_GOSTEV             \\ \cline{2-3} 
+                                    & 10GigabitEthernet0/1     & R1\_L3\_GOSTEV                \\ \cline{2-3} 
+                                    & GigabitEthernet0/14      & SW\_2\_L3\_GOSTEV             \\ 
+\end{tabular}
+\label{table:mainDepConnectionPlan}
+\end{table}
+
+\newpage
+\begin{table}[H]
+\small
+\centering
+\caption{Продолжение листинга \ref{table:mainDepConnectionPlan}}
+\begin{tabular}{|l|l|l|}
+\multirow{4}{*}{SW\_2\_L3\_GOSTEV}  & GigabitEthernet0/1-0/12  & SW\_1-12\_L2\_GOSTEV          \\ \cline{2-3} 
+                                    & GigabitEthernet0/13      & SW\_3\_L3\_GOSTEV             \\ \cline{2-3} 
+                                    & 10GigabitEthernet0/1     & R1\_L3\_GOSTEV                \\ \cline{2-3} 
+                                    & GigabitEthernet0/14      & SW\_1\_L3\_GOSTEV             \\ \hline
+\multirow{3}{*}{SW\_3\_L3\_GOSTEV}  & GigabitEthernet0/1       & S\_1\_GOSTEV                  \\ \cline{2-3} 
+                                    & GigabitEthernet0/2       & SW\_1\_L3\_GOSTEV             \\ \cline{2-3} 
+                                    & GigabitEthernet0/3       & SW\_2\_L3\_GOSTEV             \\ \hline
+\multirow{2}{*}{R\_1\_L3\_GOSTEV}   & 10GigabitEthernet0/1-0/2 & SW\_1-2\_L3\_GOSTEV           \\ \cline{2-3} 
+                                    & GigabitEthernet0/1       & SW\_3\_L3\_GOSTEV             \\ \hline
+\end{tabular}
+\end{table}
+
+\begin{landscape}
+Топология типового филиала приведена на Рисунке \ref{fig:filialTopo}.
 \begin{figure}[H]
         \centering
-        \includegraphics[scale=0.2]{topo_filial.png}
+        \includegraphics[scale=0.17]{topo_filial.png}
         \caption{Прототипируемая топология сети филиала}
         \label{fig:filialTopo}
 \end{figure}
 \end{landscape}
 
+\begin{landscape}
+        
+Спецификация устройств промежуточных устройств прототипа филала представлена в Таблице \ref{table:filialDevicesSpecs}.
+
+\begin{table}[H]
+\centering
+\small
+\caption{Спецификация промежуточных устройств прототипа филиала}
+\begin{tabular}{|m{2.5cm}|m{4cm}|m{3cm}|m{4.2cm}|m{5.3cm}|m{4cm}|}
+\hline
+\textbf{Модель устройств} & \textbf{Имя устройства} & \textbf{Модули расширения} & \textbf{Общее количество портов(с модулями расширения)} & \textbf{Используемые порты(названия, количество)} & \textbf{Свободные порты(названия, количество)} \\
+\hline
+2960 & 
+SW\_1\_L2\_GOSTEV & 
+- & 
+24 порта FastEthernet, 2 порта GigabitEthernet &
+2 порта: GigabitEthernet0/1-0/2, 1 порт FastEthernet0/1 &
+23 порта FastEthernet \\
+\hline
+2960 & 
+SW\_2\_L2\_GOSTEV & 
+- & 
+24 порта FastEthernet, 2 порта GigabitEthernet & 
+15 портов: FastEthernet0/1-0/15, 2 порта GigabitEthernet0/1-0/2 & 
+9 портов FastEthernet \\
+\hline
+2960 &
+SW\_3\_L2\_GOSTEV &
+- &
+24 порта FastEthernet, 2 порта GigabitEthernet &
+20 портов: FastEthernet0/1-0/20, 2 порта GigabitEthernet0/1-0/2 &
+4 порта FastEthernet \\
+\hline
+2960 &
+SW\_4\_L2\_GOSTEV &
+- &
+24 порта FastEthernet, 2 порта GigabitEthernet &
+12 портов: FastEthernet0/1-0/12, 2 порта GigabitEthernet0/1-0/2 &
+12 портов FastEthernet \\
+\hline
+2960 &
+SW\_5\_L2\_GOSTEV &
+- &
+24 порта FastEthernet, 2 порта GigabitEthernet &
+19 портов: FastEthernet0/1-0/19, 2 порта GigabitEthernet0/1-0/2 &
+5 портов FastEthernet \\
+\hline
+4321 &
+R\_1\_L3\_GOSTEV &
+NIM-ES2-4 (4 порта GigabitEthernet) &
+6 портов GigabitEthernet &
+2 порта: GigabitEthernet0/1-0/2 &
+4 порта GigabitEthernet \\
+\hline
+\end{tabular}
+\label{table:filialDevicesSpecs}
+\end{table}
+\end{landscape}
+
+Топология типового склада представлена на Рисунке \ref{fig:warehouseTopo}.
 \begin{figure}[H]
         \centering
         \includegraphics[scale=0.2]{topo_warehouse.png}
@@ -766,6 +1048,7 @@ ff
         \label{fig:warehouseTopo}
 \end{figure}
 
+Топология типовой точки присутствия представлена на Рисунке \ref{fig:tpTopo}.
 \begin{figure}[H]
         \centering
         \includegraphics[scale=0.2]{topo_tp.png}
